# powerdevtoys

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/webui-react/: components.json  index.html  package.json  rsbuild.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json
apps/webui-react/src/: App.module.scss  App.tsx  main.tsx
apps/webui-react/src/components/: album-artwork.tsx  menu.tsx  podcast-empty-placeholder.tsx  sidebar.tsx
apps/webui-react/src/components/ui/: input-otp.tsx  sheet.tsx
apps/webui-react/src/pages/: _functions.tsx
apps/webui-react/src/styles/: global.css
crates/raster_transformer/: .gitignore  Cargo.toml
crates/raster_transformer/examples/: .gitignore
crates/raster_transformer/src/: lib.rs
crates/raster_transformer/src/webp/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
