[package]
name = "powerdevtoys"
version = "0.1.0"
description = "Collection of dev tools, inspired by PowerToys."
authors = ["lonelyhentxi"]
license = "MIT"
repository = "https://github.com/lonelyhentxi/powerdevtoys"
default-run = "powerdevtoys"
edition = "2021"
rust-version = "1.60"

[lib]
name = "powerdevtoys_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
